cmake_minimum_required(VERSION 3.10)
project(DataStructures)

set(CMAKE_CXX_STANDARD 11)

add_executable(CheckBrackets "01 - Data Structures Fundamentals/check_brackets.cpp")
add_executable(TreeHeight "01 - Data Structures Fundamentals/tree_height.cpp")
add_executable(ProcessPackages "01 - Data Structures Fundamentals/process_packages.cpp")