cmake_minimum_required(VERSION 3.10)
project(DataStructures)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_1_CheckBrackets "01 - Data Structures Fundamentals/check_brackets.cpp")
add_executable(01_2_TreeHeight "01 - Data Structures Fundamentals/tree_height.cpp")
add_executable(01_3_ProcessPackages "01 - Data Structures Fundamentals/process_packages.cpp")
add_executable(02_1_PriorityQueue "02 - Priority Queues and Disjoint Sets/PriorityQueue.cpp")